# N-VIEW

./: .env.example  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: README.md  commands-and-options.md  configuration-and-presets.md  contributing-and-contact.md  dashboard-overview.md  feature-summary.md  installation-and-requirements.md  quick-usage-and-examples.md  troubleshooting-and-faq.md
nview/: cli.py
scripts/: install.sh  install_linux.sh  install_macos.sh  install_windows.ps1
